--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -1,103 +1,3 @@
 section#history {
-  background: $base-purple;
-  
-  div#history-container {
-    div#history-cards {
-      position: absolute;
-      height: calc(100% - 2 * #{$gutter});
-      width: calc(100% - 2 * #{$gutter});
-      left: $gutter;
-      top: $gutter;
-      
-      @include card($alt-purple);
-    }
-    
-    div#history-mechanism {
-      position: absolute;
-      height: 4 * $gutter;
-      background: transparent;
-      z-index: 1;
-      cursor: pointer;
-      width: calc(100% - 4 * #{$gutter} - 64px);
-      bottom: calc(64px / 2);
-      left: 50%;
-      max-width: 960px;
-      
-      @include transform(translateX(-50%));
-      
-      @include respond-to(tablet) {
-        width: calc(100% - 4 * #{$gutter} - 56px);
-        bottom: calc(64px / 2);
-      }
-      
-      @include respond-to(phone) {
-        width: calc(100% - 4 * #{$gutter} - 52px);
-        bottom: calc(52px / 2);
-      }
-      
-      div#history-track {
-        position: absolute;
-        top: 50%;
-        background: $base-purple;
-        height: 2 * $gutter;
-        width: 100%;
-        border: 2px solid white;
-        
-        @include transform(translateY(-50%));
-        @include border-radius($gutter);
-      
-        div#history-track-detents {
-          span {
-          position: absolute;
-          top: 50%;
-          background: white;
-          height: $gutter;
-          width: $gutter;
-          
-          @include transform(translate(-50%, -50%));
-          @include border-radius(50%);
-          }
-        }
-      }
-      
-      div#history-slider {
-        position: absolute;
-        top: 50%;
-        background: white;
-        height: 64px;
-        width: 64px;
-        
-        @include respond-to(tablet) {
-          height: 56px;
-          width: 56px;
-        }
-        
-        @include respond-to(phone) {
-          height: 52px;
-          width: 52px;
-        }
-        
-        @include user-select(none);
-        @include transform(translate(-50%, -50%));
-        @include border-radius(50%);
-      
-        div.history-slider-icon {
-          display: none;
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          opacity: 0;
-          
-          @include border-radius(50%);
-          
-          @include circle-icon($base-purple, $alt-purple);
-        
-          &.focus {
-            display: inline;
-            opacity: 1;
-          }
-        }
-      }
-    }
-  }
+  @include section-colors($base-purple, $alt-purple);
 }
