--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer id="footer">
   <div id="footer-icons">
-    <div class="footer-icon">
+    <div class="icon">
       <div><%= render "icons/github" %></div>
       <a href="https://github.com/lucaswinningham/"></a>
     </div>
-    <div class="footer-icon">
+    <div class="icon">
       <div><%= render "icons/linkedin" %></div>
       <a href="https://www.linkedin.com/in/lucas-winningham-0a500278"></a>
     </div>
