--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -1,5 +1,5 @@
 <section id="contact" class="section">
-  <div id="contact-container" class="section-container">
+  <div id="contact-container" class="container">
     <div id="contact-content">
       <input id="contact-address" type="text" placeholder="Email" />
       
