--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -152,14 +152,123 @@ $inscribed: 17.5%;
   color: white;
 }
 
-.section-container {
+.container {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
 }
+  
+.cards {
+  position: absolute;
+  width: calc(100% - 2 * #{$gutter});
+  left: $gutter;
+  top: $gutter;
+  height: calc(100% - 2 * #{$gutter});
+}
 
-a.btn {
+.card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  padding: $gutter;
+  opacity: 0;
+  
+  @include user-select(none);
+  @include cursor-grab;
+  @include transition(all, 1s, $normal-bezier, 0s);
+  @include border-radius($radius);
+  
+  &.left {
+    left: -150%;
+  }
+  
+  &.right {
+    left: 150%;
+  }
+  
+  &.focus {
+    left: 0;
+    opacity: 1;
+  }
+  
+  &.mousedown {
+    @include cursor-grabbing;
+  }
+}
+
+.card-tondo {
+  position: absolute;
+  height: 128px;
+  width: 128px;
+  top: $gutter;
+  left: $gutter;
+  background: white;
+  cursor: pointer;
+  z-index: 2;
+  
+  @include responsive-shadow;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #ccc;
+  background-size: cover;
+  
+  @include border-radius(50%);
+  @include transition(all, 1s, $normal-bezier, 0s);
+  
+  @include respond-to(phone) {
+    height: 96px;
+    width: 96px;
+  }
+  
+  &.focus {
+    @include border-radius($radius);
+  }
+}
+
+.card-content {
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  
+  @include transform(translate(-50%,-50%));
+  
+  .btn {
+    margin-top: $gutter;
+    
+    &.hover, &.mousedown {
+      color: white;
+    }
+  }
+}
+
+.card-head {
+  display: inline-block;
+  width: 100%;
+  font-size: 35pt;
+  text-align: center;
+  padding-bottom: $gutter;
+  border-bottom: 4px solid white;
+  
+  @include respond-to(phone) { font-size: 20pt; }
+}
+
+.card-body {
+  display: inline-block;
+  width: 100%;
+  font-size: 20pt;
+  text-align: justify;
+  padding-top: $gutter;
+  font-family: $sans-serif;
+  
+  @include respond-to(phone) { font-size: 11pt; }
+}
+
+.btn {
   display: inline-block;
   width: 100%;
   max-width: 400px;
@@ -168,163 +277,81 @@ a.btn {
   
   @include border-radius($radius);
   
+  &.hover, &.mousedown {
+    border: 4px solid white;
+    color: white !important;
+  }
+  
   &.hover {
     background: transparent;
-    border: 4px solid white;
-    // color: white;
   }
   
   &.mousedown {
-    border: 4px solid white;
-    // color: white;
     background: rgba(0,0,0,0.1);
     
     @include transform(translateY(4px));
   }
+}
+
+.btn-txt-wrapper {
+  position: relative;
+  width: 100%;
+  top: 50%;
   
-  div.btn-txt-wrapper {
-    position: relative;
-    width: 100%;
-    top: 50%;
-    
-    @include transform(translateY(-50%));
-    
-    span.btn-txt {
-      display: inline-block;
-      width: 100%;
-      font-size: 2em;
-      text-align: center;
-    }
-  }
+  @include transform(translateY(-50%));
 }
 
-@mixin card($color) {
-  .card {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    padding: $gutter;
-    opacity: 0;
-    background: $color;
-    
-    @include user-select(none);
-    @include cursor-grab;
-    @include transition(all, 1s, $normal-bezier, 0s);
-    @include border-radius($radius);
-    
-    &.left {
-      left: -150%;
-    }
-    
-    &.right {
-      left: 150%;
-    }
-    
-    &.focus {
-      left: 0;
-      opacity: 1;
-    }
-    
-    &.mousedown {
-      @include cursor-grabbing;
-    }
-    
-    .card-tondo {
-      position: absolute;
-      height: 128px;
-      width: 128px;
-      top: $gutter;
-      left: $gutter;
-      background: white;
-      cursor: pointer;
-      z-index: 2;
-      
-      @include responsive-shadow;
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-color: #ccc;
-      background-size: cover;
-      
-      @include border-radius(50%);
-      @include transition(all, 1s, $normal-bezier, 0s);
-      
-      @include respond-to(phone) {
-        height: 96px;
-        width: 96px;
-      }
-      
-      &.focus {
-        @include border-radius($radius);
-      }
-    }
-    
-    .card-content {
-      position: relative;
-      width: 100%;
-      max-width: 960px;
-      top: 50%;
-      left: 50%;
-      text-align: center;
-      
-      @include transform(translate(-50%,-50%));
-      
-      .card-head {
-        display: inline-block;
-        width: 100%;
-        font-size: 35pt;
-        text-align: center;
-        padding-bottom: $gutter;
-        border-bottom: 4px solid white;
-        
-        // @include respond-to(phone) { font-size: 2em; }
-        @include respond-to(phone) { font-size: 20pt; }
-      }
-      
-      .card-body {
-        display: inline-block;
-        width: 100%;
-        font-size: 20pt;
-        text-align: justify;
-        padding-top: $gutter;
-        font-family: $sans-serif;
-        
-        // @include respond-to(phone) { font-size: 1.1em; }
-        @include respond-to(phone) { font-size: 11pt; }
-      }
-      
-      a.btn {
-        margin-top: $gutter;
-        color: $color;
-        
-        &.hover, &.mousedown {
-          color: white;
-        }
-      }
-    }
-  }
+.btn-txt {
+  display: inline-block;
+  width: 100%;
+  font-size: 2em;
+  text-align: center;
 }
 
-@mixin circle-icon($base-color, $alt-color) {
+.breadcrumbs {
+  position: absolute;
+  bottom: 2 * $gutter;
+  width: calc(100% - 4 * #{$gutter});
+  left: 50%;
+  max-width: 960px;
+  
+  @include transform(translateX(-50%));
+}
+
+.icon {
   position: absolute;
   cursor: pointer;
   background: white;
-  border: 2px solid $base-color;
+  // left: calc(-64px - 3 * #{$gutter});
+  bottom: 0;
+  height: 80px;
+  width: 80px;
   
-  &.hover {
-    background: $alt-color;
+  @include border-radius(50%);
+  @include transition(left, 1.5s, $normal-bezier, 0s);
+  
+  @include respond-to(tablet) {
+    height: 64px;
+    width: 64px;
   }
   
-  &.mousedown, &.active {
-    background: $base-color;
+  @include respond-to(phone) {
+    height: 50px;
+    width: 50px;
+  }
+  
+  &.mousedown {
+    @include transform(translateY(4px));
+    
+    @include respond-to(phone) { @include transform(translateY(-24px)); }
   }
   
   &.hover, &.mousedown, &.active {
-    border: 2px solid white;
+    border: 2px solid white !important;
     
     div {
       svg {
-        stroke: white;
+        stroke: white !important;
       }
     }
   }
@@ -338,9 +365,35 @@ a.btn {
     &.expand {
       padding: 10%;
     }
+  }
+}
+
+@mixin section-colors($base-color, $alt-color) {
+  background: $base-color;
+  
+  .card {
+    background: $alt-color;
+  }
+  
+  .btn {
+    color: $base-color;
+  }
+  
+  .icon {
+    border: 2px solid $base-color;
     
-    svg {
-      stroke: $base-color;
+    &.hover {
+      background: $alt-color;
+    }
+    
+    &.mousedown, &.active {
+      background: $base-color;
+    }
+    
+    div {
+      svg {
+        stroke: $base-color;
+      }
     }
   }
 }
