--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -1,53 +1,3 @@
 section#about {
-  background: $base-blue;
-  
-  div#about-container {
-    div#about-cards {
-      position: absolute;
-      width: calc(100% - 2 * #{$gutter});
-      left: $gutter;
-      top: $gutter;
-      height: calc(100% - 2 * #{$gutter});
-      
-      @include card($alt-blue);
-    }
-    
-    div#about-breadcrumbs {
-      position: absolute;
-      bottom: 2 * $gutter;
-      width: calc(100% - 4 * #{$gutter});
-      left: 50%;
-      max-width: 960px;
-      
-      @include transform(translateX(-50%));
-      
-      div.about-breadcrumb {
-        left: calc(-64px - 3 * #{$gutter});
-        bottom: 0;
-        height: 80px;
-        width: 80px;
-        
-        @include border-radius(50%);
-        @include transition(left, 1.5s, $normal-bezier, 0s);
-        
-        @include respond-to(tablet) {
-          height: 64px;
-          width: 64px;
-        }
-        
-        @include respond-to(phone) {
-          height: 50px;
-          width: 50px;
-        }
-        
-        @include circle-icon($base-blue, $alt-blue);
-        
-        &.mousedown {
-          @include transform(translateY(4px));
-          
-          @include respond-to(phone) { @include transform(translateY(-24px)); }
-        }
-      }
-    }
-  }
+  @include section-colors($base-blue, $alt-blue);
 }
