--- a/app/assets/stylesheets/pages/home/_work.scss
+++ b/app/assets/stylesheets/pages/home/_work.scss
@@ -1,97 +1,3 @@
 section#work {
-  background: $base-red;
-  
-  div#work-container {
-    div#work-cards {
-      position: absolute;
-      height: calc(100% - 2 * #{$gutter});
-      width: calc(100% - 2 * #{$gutter});
-      left: $gutter;
-      top: $gutter;
-      
-      @include card($alt-red);
-    }
-    
-    div#work-menu-toggle {
-      position: absolute;
-      height: 64px;
-      width: 64px;
-      top: calc(100% - 2 * #{$gutter});
-      left: calc(100% - 2 * #{$gutter});
-      background: white;
-      border: 2px solid $alt-red;
-      z-index: 2;
-      cursor: pointer;
-      
-      @include responsive-shadow;
-      @include transform(translate(-100%, -100%));
-      @include transition(all, 0.8s, $normal-bezier, 0s);
-      @include border-radius(50%);
-      
-      &.focus {
-        top: 50%;
-        left: 50%;
-        
-        @include transform(translate(-50%, -50%));
-        @include transition(all, 0.4s, $normal-bezier, 0s);
-      }
-      
-      div.burger {
-        padding: $inscribed;
-        
-        i {
-          background: $alt-red;
-          
-          // Undo box shadow for burger
-          box-shadow: none;
-        }
-      }
-    }
-    
-    div#work-menu {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      z-index: -1;
-      opacity: 0;
-      
-      @include transform(translate(-50%,-50%));
-      @include transition(all, 1s, $normal-bezier, 0s);
-      
-      &.focus {
-        z-index: 1;
-        opacity: 1;
-      }
-      
-      div#work-menu-petal-container {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        background: rgba(255, 255, 255, 0.35);
-        
-        @include transition(all, 1s, $normal-bezier, 0s);
-        @include border-radius(50%);
-        
-        div.work-menu-petal {
-          height: 96px;
-          width: 96px;
-          
-          @include transition(transform, 1s, $normal-bezier, 0s);
-          @include border-radius(50%);
-          
-          @include circle-icon($alt-red, $alt-red);
-        
-          @include respond-to(tablet) {
-            height: 80px;
-            width: 80px;
-          }
-          
-          @include respond-to(phone) {
-            height: 64px;
-            width: 64px;
-          }
-        }
-      }
-    }
-  }
+  @include section-colors($base-red, $alt-red);
 }
