--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -1,18 +1,20 @@
 <section id="history" class="section">
   <div class="container">
     <div class="cards">
-      <%= render("_/card", head: "My Past", body: "Learn Where I've Been.") %>
+      <%= render("_/card", head: "How I Got Here.", body: "Learn where I've been and what I've done.") %>
       
-      <%= render("_/card", head: "2014", body: "I earned my BS in Electrical Engineering from Rose Hulman Institute of Technology in May 2014. My experiences there captivated my interest in programming which I continue to study to this day. It was there that I found my passion of programming.") %>
+      <%= render("_/card", head: "2014", body: "I graduated with my Bachelor of Science in Electrical Engineering from Rose-Hulman Institute of Technology in May 2014. Studying robotics at Rose is what initially sparked my interest in programming. I learned the reward of hard work and the value of team effort.") %>
       
-      <%= render("_/card", head: "2015", body: "Upon graduation, I signed on with a material handling company as Project Engineer. It was here that I specialized my skills in controls design and installation, being involved at all steps of a project from cradle to grave. I was able to travel to Central America for the first time and meet so many awesome people. I quickly became interested in programming and how it fulfilled my desire to simply solve problems as my job.") %>
+      <%= render("_/card", head: "2015", body: "Before graduation, I signed on with a material handling company as a Project Engineer. Here I specialized in controls design and installation, overseeing and implementing each phase of my projects. I had the opportunity to travel to Central America for international projects, experiencing different cultures by being immmersed in them for weeks at a time. It was during installations like these that I discovered myself being drawn more and more toward programming.") %>
       
-      <%= render("_/card", head: "2016", body: "I became Controls Engineer for an automotive manufacturing company. It was here that I was able to develop some ideas that were brewing for some time that would allow the rapid prototyping and automated design of schematics and programs with various languages. In particular, I was able to standardize drawings for new machines as well as reduce initial drawing design time considerably using Lisp for AutoCAD.") %>
+      <%= render("_/card", head: "2016", body: "Following my time as a Project Engineer, I accepted a position with an automotive manufacturer as a Controls Engineer. Here I was able to develop and implement ideas to allow for rapid prototyping and automated design of schematics and programs using multiple programming languages. Specifically, I standardized drawings for new machines and significantly reduced initial drawing design time using Lisp for AutoCAD.") %>
       
-      <%= render("_/card", head: "2017", body: "A close friend suggested I try my hand at web development after I shared my love for programming. I fell in love with it. I have always loved design principles and concepts and now I am able to mix that with programming. It's absolutely satisfying fulfilling these two passions of mine with web development. It is where I belong and it is where I will excel.") %>
+      <%= render("_/card", head: "2017", body: "A close friend suggested I try my hand at web development after we discussed my passion for programming. This year I have fallen in love with it. I have always been fascinated by the principles and concepts of design, and it is electrifying to be able to combine these with programming. I am certain I have found my vocation and I know I will excel as I continue to develop my skills and abilities as a web developer.") %>
       
       <%= render("_/card", head: "Maybe You Feel Like Reaching Out", contact: "CONTACT") %>
     </div>
+    
+    <div class="modal"></div>
     
     <div class="breadcrumbs">
       <div class="icon">
