--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -14,6 +14,8 @@
       <%= render("_/card", head: "Tell Me What You Think", contact: "CONTACT") %>
     </div>
     
+    <div class="modal"></div>
+    
     <div class="breadcrumbs">
       <div class="icon">
         <div><%= render "icons/work" %></div>
