Add pictures of leigh and millie for about section

--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -3,11 +3,11 @@
     <div class="cards">
       <%= render("_/card", head: "Hello! Welcome To My Site.", body: "Take a look around and get to know me.") %>
       
-      <%= render("_/card", pics: ["luke.jpg", "leigh.jpg", "millie.jpg"], head: "I'm Luke.", body: "I am a junior web developer with a passion for unique design, an exacting eye for detail, and a commitment to thorough execution. Driven by my personal standards for high quality and the iterative development process, I pride myself on delivering products that set themselves apart. Simple and straightforward is always better.") %>
+      <%= render("_/card", head: "I'm Luke.", body: "I am a junior web developer with a passion for unique design, an exacting eye for detail, and a commitment to thorough execution. Driven by my personal standards for high quality and the iterative development process, I pride myself on delivering products that set themselves apart. Simple and straightforward is always better.") %>
       
-      <%= render("_/card", pics: ["leigh.jpg"], head: "My Best Friend", body: "For over seven years, Leigh has been my core and foundation. I am so lucky to spend every day with her. She is currently pursuing her dream of becoming a nurse and excelling in both the classroom and the clinical setting. I cannot imagine being without her and I am excited for our future.") %>
+      <%= render("_/card", pics: ["leigh.jpg", "leigh_luke.jpg", "leigh_nurse.jpg"], head: "My Best Friend", body: "For over seven years, Leigh has been my core and foundation. I am so lucky to spend every day with her. She is currently pursuing her dream of becoming a nurse and excelling in both the classroom and the clinical setting. I cannot imagine being without her and I am excited for our future.") %>
       
-      <%= render("_/card", pics: ["millie.jpg"], head: "Millie The Pup", body: "Rescued and sassy, she loves chewing on bones and howling at the neighbors. Her cuteness is deceptive - she becomes rowdy and rambunctious when she decides it is time to play tug-of-war. After a busy day, she wants nothing more than to cuddle and fall asleep at the end of the bed.") %>
+      <%= render("_/card", pics: ["millie.jpg", "millie_beg.jpg", "millie_nap.jpg"], head: "Millie The Pup", body: "Rescued and sassy, she loves chewing on bones and howling at the neighbors. Her cuteness is deceptive - she becomes rowdy and rambunctious when she decides it is time to play tug-of-war. After a busy day, she wants nothing more than to cuddle and fall asleep at the end of the bed.") %>
       
       <%= render("_/card", head: "Find Out More By Getting In Touch", contact: "CONTACT") %>
     </div>
