Add pictures of myself in about section

--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -3,7 +3,7 @@
     <div class="cards">
       <%= render("_/card", head: "Hello! Welcome To My Site.", body: "Take a look around and get to know me.") %>
       
-      <%= render("_/card", head: "I'm Luke.", body: "I am a junior web developer with a passion for unique design, an exacting eye for detail, and a commitment to thorough execution. Driven by my personal standards for high quality and the iterative development process, I pride myself on delivering products that set themselves apart. Simple and straightforward is always better.") %>
+      <%= render("_/card", pics: ["luke.jpg", "luke_chi.jpg", "luke_play.jpg"], head: "I'm Luke.", body: "I am a junior web developer with a passion for unique design, an exacting eye for detail, and a commitment to thorough execution. Driven by my personal standards for high quality and the iterative development process, I pride myself on delivering products that set themselves apart. Simple and straightforward is always better.") %>
       
       <%= render("_/card", pics: ["leigh.jpg", "leigh_luke.jpg", "leigh_nurse.jpg"], head: "My Best Friend", body: "For over seven years, Leigh has been my core and foundation. I am so lucky to spend every day with her. She is currently pursuing her dream of becoming a nurse and excelling in both the classroom and the clinical setting. I cannot imagine being without her and I am excited for our future.") %>
       
